[tool.poetry]
name = "repl_nix_KalimbaMidiGenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
MIDIUtil = "^1.2.1"
mido = "^1.2.10"
music21 = "^8.1.0"
py-midi = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
